# GretaBot

./: .gitignore  .gitpod.yml  Pipfile  README.md  bot.py  checks.py  config_example.ini  database.py  dev_requirements.txt  loguru_intercept.py  mypy.ini  pyproject.toml  requirements.txt
dbschema/: schema.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql  00008.edgeql  00009.edgeql  00010.edgeql  00011.edgeql  00012.edgeql  00013.edgeql  00014.edgeql
queries/: add_guild.edgeql  add_guild_channel.edgeql  add_others.edgeql  add_user.edgeql  addquote.edgeql  edgeql_queries.py  get_guild.edgeql  get_user.edgeql  update_guild.edgeql  update_user.edgeql
stubs/: peewee.pyi
stubs/sniffio/: __init__.pyi  _impl.pyi
